clusters/app2/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app2-pg-cluster
  namespace: app2-pg-cluster
spec:
  hosts:
    - "app2.local"
  gateways:
    - cnpg/postgres-gateway
  tcp:
    - match:
        - port: 5432
      route:
        - destination:
            host: app2-pg-cluster-pooler-rw.pg-cluster.svc.cluster.local # <service>.<namespace>.svc.cluster.local
            port:
              number: 5432
